--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= experience.end_date %></td>
         <td><%= experience.active %></td>
         <td><%= link_to 'Show', experience %></td>
-        <td><%= link_to 'Edit', edit_admin_experience_path(experience) %></td>
+        <td><%= link_to 'Edit', edit_experience_path(experience) %></td>
         <td><%= link_to 'Destroy', experience, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Experience', new_admin_experience_path %>
+<%= link_to 'New Experience', new_experience_path %>
