--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -13,7 +13,7 @@
 
     <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
     <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <!--%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true % -->
     <%= f.association :gender %>
     <%= f.association :age_range %>
     <%= f.country_select :country %>
