--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -1,14 +1,11 @@
-<%= simple_form_for @experience,
-    url: admin_experience_path( @experience ) do |f| %>
+<%= simple_form_for @experience do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.association :user %>
-    <%= f.input :name %>
     <%= f.association :course %>
+    <%= f.input :name %>
     <%= f.check_box :active %>
     <%= f.input :start_date, as: :date, html5: true %>
-    <%= f.input :end_date, as: :date, html5: true %>
     <%= f.input :end_date, as: :date, html5: true %>
   </div>
 
