--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @experience %> |
-<%= link_to 'Back', admin_experiences_path %>
+<%= link_to 'Back', experiences_path %>
