--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -18,5 +18,5 @@
 
 
 
-<%= link_to 'Edit', edit_admin_experience_path(@experience) %> |
-<%= link_to 'Back', admin_experiences_path %>
+<%= link_to 'Edit', edit_experience_path(@experience) %> |
+<%= link_to 'Back', experiences_path %>
