--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -44,5 +44,5 @@
 
 
 
-<%= link_to 'Edit', edit_admin_project_path(@project) %> |
-<%= link_to 'Back', admin_projects_path %>
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
