--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -11,7 +11,7 @@
 
 <br>
 <hr>
-<%= form_for @diagnosis, :url => { :controller => "exp", :action => "diagnose" }, :method => :get do |f| %>
+<%= form_for @diagnosis, :url => { :controller => "experiences", :action => "diagnose" }, :method => :get do |f| %>
 
   <%= f.hidden_field( :week_id ) %>
 
