--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
   You do not currently have any tasks due. Check back later or contact your instructor.
 <% end %></p>
 
-<% if @waiting_tasks.any? %>
+<% if @waiting_tasks.any? || @waiting_rosters.any? %>
    <table>
      <tr>
      <th>Project Name</th>
@@ -54,6 +54,19 @@
                 </td>
               </tr>
          <% end %>
+    <% end %>
+    <% @waiting_rosters.each do |roster| %>
+      <tr>
+      <td>
+        <%= link_to "Accept", accept_roster_path( :roster_id => roster.id ) %> / 
+        <%= link_to "Decline", decline_roster_path( :roster_id => roster.id ) %> / 
+      </td>
+      <td>N/A</td>
+      <td><%= roster.course.name %></td>
+      <td><%= roster.course.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
+      <td><%= roster.course.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %></td>
+      <td>N/A</td>
+      </tr>
     <% end %>
   </table>
 <% end %>
