--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -11,7 +11,7 @@
 
 <br>
 <hr>
-<%= form_for @diagnosis, :url => { :controller => "experiences", :action => "diagnose" }, :method => :get do |f| %>
+<%= simple_form_for @diagnosis, :url => { :controller => "experiences", :action => "diagnose" }, :method => :get do |f| %>
 
   <%= f.hidden_field :week_id, value: @diagnosis.week_id  %>
   <%= f.hidden_field :reaction_id, value: @reaction.id  %>
@@ -24,11 +24,7 @@
       <h3>Which behavior best characterizes this group now?</h3>
     </div>
     <div class="ui-body ui-body-a">
-      <% Behavior.all.each do |b| %>
-        <%= f.radio_button :behavior_id, b.id, { 'data-theme'=>'b' } %>
-        <%= f.label :behavior_id, b.name, value: b.id %>
-        <p><%= b.description.html_safe %></p>
-      <% end %>
+      <%= f.association :behavior, :collection => Behavior.all, :as => :radio_buttons %>
 
       <% if @diagnosis.errors.any? && @diagnosis.errors[ :other_name ].count > 0 %>
         <div id="other_name_panel">
@@ -37,14 +33,14 @@
         <div style="display: none" id="other_name_panel">
       <% end %>
           <%= f.label :other_name, "What behavior did you see?" %>
-          <%= f.text_field :other_name %><br>
+          <%= f.input :other_name %><br>
         </div>
     </div>
   </div>
 
   <div data-role="collapsible">
     <h3><%= f.label :comment, "Click here if you have additional comments for us regarding this narrative." %></h3>
-    <%= f.text_area :comment, size: "24x6" %>
+    <%= f.input :comment, as: :text, size: "24x6" %>
   </div>
   <br><br>
 
