--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,10 +26,10 @@
                 <tr>
                 <td>
                   <% if(task.is_completed_by_user @current_user) %>
-                    <%= link_to "Assess Group: " + group.name, edit_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
+                    <%= link_to "Assess Group: #{group.name}", edit_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
                     <br>(Project: <%= task.project.name %>)
                   <% else %>
-                    <%= link_to "Assess Group: " + group.name, new_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
+                    <%= link_to "Assess Group: #{group.name}", new_installment_path( :assessment_id => task.id, :group_id => group.id ) %>
                     <br>(Project: <%= task.project.name %>)
                   <% end %>
                 </td>
@@ -59,7 +59,7 @@
                   <%= week.nil? ? "Not Started" : week.percent_complete.to_s + "%" %>
                   </em>
                 </td>
-                <td> <%= task.course.name + "(" + task.course.get_roster_for_user( @current_user ).role.name + ")"%></td>
+                <td> #{task.course.name} (#{task.course.get_roster_for_user( @current_user ).role.name})</td>
                 <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td>
