Cleaned up view and fixed a bug with incrementing weeks

--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -14,7 +14,7 @@
 <%= simple_form_for @diagnosis, :url => { :controller => "experiences", :action => "diagnose" }, :method => :get do |f| %>
 
   <%= f.hidden_field :week_id, value: @diagnosis.week_id  %>
-  <%= f.hidden_field :reaction_id, value: @reaction.id  %>
+  <%= f.hidden_field :reaction_id, value: @diagnosis.reaction.id  %>
 
   <% if @diagnosis.errors.any? && @diagnosis.errors[:behavior ].count > 0 %>
     <p class='error'><%= @diagnosis.errors[ :behavior ].first %></p>
