--- a/app/views/experiences/next.html.erb
+++ b/app/views/experiences/next.html.erb
@@ -24,7 +24,7 @@
       <h3>Which behavior best characterizes this group now?</h3>
     </div>
     <div class="ui-body ui-body-a">
-      <%= f.association :behavior, :collection => Behavior.all, :as => :radio_buttons %>
+      <%= f.association :behavior, :collection => Behavior.all, :as => :radio_buttons, label: false, :error => false %>
 
       <% if @diagnosis.errors.any? && @diagnosis.errors[ :other_name ].count > 0 %>
         <div id="other_name_panel">
@@ -32,15 +32,14 @@
       <% else %>
         <div style="display: none" id="other_name_panel">
       <% end %>
-          <%= f.label :other_name, "What behavior did you see?" %>
-          <%= f.input :other_name %><br>
+          <%= f.input :other_name, label: "What behavior did you see?" %><br>
         </div>
     </div>
   </div>
 
   <div data-role="collapsible">
-    <h3><%= f.label :comment, "Click here if you have additional comments for us regarding this narrative." %></h3>
-    <%= f.input :comment, as: :text, size: "24x6" %>
+    <h3>Click here if you have additional comments for us regarding this narrative.</h3>
+    <%= f.input :comment, as: :text, size: "24x6", label: "Your comments:" %>
   </div>
   <br><br>
 
