--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,7 @@
                   <%= week.nil? ? "Not Started" : week.percent_complete.to_s + "%" %>
                   </em>
                 </td>
-                <td> #{task.course.name} (#{task.course.get_roster_for_user( @current_user ).role.name})</td>
+                <td><%= task.course.name %> (<%task.course.get_roster_for_user( @current_user ).role.name %></td>
                 <td> <%= task.start_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td> <%= task.end_date.in_time_zone( @current_user.timezone ).strftime( "%a, %b %-d at %-l:%M%P %Z") %> </td>
                 <td>
