--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,74 @@
  *= require colab-theme
  *= require app_style
  */
+
+.error
+{
+  width: 400px;
+  border: 1px solid #D8D8D8;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #FFBABA;
+  color: #D8000C;
+  text-align: center;
+}
+
+.notice
+{
+  width: 400px;
+  border: 1px solid #D8D8D8;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #FEEFB3;
+  color: #9F6000;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*
+* Thank you for the progress bar RoToRa
+* http://stackoverflow.com/questions/7190898/progress-bar-with-html-and-css
+*/
+#progressbar
+{
+  background-color: black;
+  border-radius: 9px; /* (height of inner div) / 2 + padding */
+  padding: 3px;
+}
+
+#progressbar > div
+{
+  background-color: green;
+  height:           12px;
+  border-radius:    12px;
+  color:            #F0F0F0;
+  font-size:        10px;
+  text-shadow:      0px 0px;
+  padding:          1px;
+}
+
+dt
+{
+  font-weight:      bold;
+  text-decoration:  underline;
+}
+
+h1
+{
+  font-variant:     small-caps;
+  font-weight:      bold;
+  text-align:       center;
+}
+
+h2
+{
+  font-weight:      bold;
+  text-align:       center;
+}
+
+h3
+{
+  font-variant:     small-caps;
+}
+
