--- a/app/views/experiences/reaction.html.erb
+++ b/app/views/experiences/reaction.html.erb
@@ -1,2 +1,74 @@
-<h1>Experiences#reaction</h1>
-<p>Find me in app/views/experiences/reaction.html.erb</p>
+<div class="ui-corner-all custom-corners">
+  <div class="ui-bar ui-bar-a">
+    <h3>Overall Group Behavior</h3>
+  </div>
+  <div class="ui-body ui-body-a">
+    <p>
+    Please reflect on the entire narrative that you have just finished reading and
+    tell us which of the following behaviors best characterizes the group over the course
+    of the entire semester.
+    </p>
+  </div>
+</div>
+
+<br>
+<%= simple_form_for @reaction, :url => { :controller => "experiences", :action => "react" }, :method => :get do |f| %>
+  <%= f.hidden_field( :narrative_id ) %>
+
+  <% if @reaction.errors.any? && @reaction.errors[:behavior ].count > 0 %>
+    <p class='error'><%= @reaction.errors[ :behavior ].first %></p>
+  <% end %>
+
+  <div class="ui-corner-all custom-corners">
+    <div class="ui-bar ui-bar-a">
+      <h3>What behavior dominated the narrative?</h3>
+    </div>
+    <div class="ui-body ui-body-a">
+      <%= f.association :behavior, :collection => Behavior.all, :as => :radio_buttons, label: false, :error => false %>
+      <% if @reaction.errors.any? && @reaction.errors[ :other_name ].count > 0 %>
+        <div id="other_name_panel">
+        <p class='error'><%= @reaction.errors[ :other_name ].first %></p>
+      <% else %>
+        <div style="display: none" id="other_name_panel">
+      <% end %>
+          <%= f.input :other_name, label: "What behavior did you see?" %><br>
+        </div>
+    </div>
+  </div>
+
+
+
+  <div class="ui-corner-all custom-corners">
+    <div class="ui-bar ui-bar-a">
+      <h3>Would you like to know what behavior we were attempting to illustrate?</h3>
+    </div>
+    <div class="ui-body ui-body-a">
+      <div id="interested" class="ui-grid-a ui-responsive">
+        <div class="ui-block-a">
+          <a href="#reveal" id="reveal" class="ui-btn ui-state-disabled">Yes</a>
+        </div>
+        <div class="ui-block-b">
+          <%= f.submit "No, just save and finish"%>
+        </div>
+      </div>
+      <div id="reveal_panel" style="display: none">
+        I was trying to write a narrative that showed: <%= @reaction.narrative.scenario.behavior.name %>
+        <br>
+        <br>
+        <br>
+        <div style="display: none">
+          <div class="ui-bar ui-bar-a" >
+            <h3>How could I improve upon it? (optional) </h3>
+          </div>
+          <%= f.input :improvements, as: :text, size: "24x6", label: "Your suggestions:" %>
+        </div>
+        <div id="final_submit_panel" style="display: none">
+          <%= f.submit "Submit" %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+<% end %>
+
