--- a/app/views/experiences/reaction.html.erb
+++ b/app/views/experiences/reaction.html.erb
@@ -13,6 +13,7 @@
 
 <br>
 <%= simple_form_for @reaction, :url => { :controller => "experiences", :action => "react" }, :method => :get do |f| %>
+  <%= f.hidden_field( :id ) %>
   <%= f.hidden_field( :narrative_id ) %>
 
   <% if @reaction.errors.any? && @reaction.errors[:behavior ].count > 0 %>
@@ -38,25 +39,7 @@
 
 
 
-  <div class="ui-corner-all custom-corners">
-    <div class="ui-bar ui-bar-a">
-      <h3>Would you like to know what behavior we were attempting to illustrate?</h3>
-    </div>
-    <div class="ui-body ui-body-a">
-      <div id="interested" class="ui-grid-a ui-responsive">
-        <div class="ui-block-a">
-          <a href="#reveal" id="reveal" class="ui-btn ui-state-disabled">Yes</a>
-        </div>
-        <div class="ui-block-b">
-          <%= f.submit "No, just save and finish"%>
-        </div>
-      </div>
-      <div id="reveal_panel" style="display: none">
-        I was trying to write a narrative that showed: <%= @reaction.narrative.scenario.behavior.name %>
-        <br>
-        <br>
-        <br>
-        <div style="display: none">
+        <div>
           <div class="ui-bar ui-bar-a" >
             <h3>How could I improve upon it? (optional) </h3>
           </div>
@@ -65,10 +48,6 @@
         <div id="final_submit_panel" style="display: none">
           <%= f.submit "Submit" %>
         </div>
-      </div>
-    </div>
-  </div>
-
   
 <% end %>
 
