Adding groups works now - no simple_form_for

--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -7,8 +7,8 @@
 <% end %>
 
 <div class="instructions">
-<p>Please complete this weeks' <%= @installment_name %> assessment for 
-group `<%= @group_name %>' by indicating how much effort each of the
+<p>Please complete this weeks' assessment for 
+group <em><%= @group.name %></em> by indicating how much effort each of the
 <%= @members.count %> members of your group contributed towards each of
 the <%= @factors.count %> factors. Please keep in mind that <em>this
 report <u>should only cover this past week</u> and none of the period 
