--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -14,29 +14,23 @@
     <%= f.input :description, as: :text %>
   </div>
   <h2>Group memberships</h2>
-  <% unless @project.groups.count < 1 %>
-    <table>
-      <tr>
-        <th>Student</th>
+  <% if @project.groups.any? || @project.users.enrolled.any? %>
+  <table>
+    <tr>
+      <th>&nbsp;</th>
       <% @project.groups.each do |group| %>
-        <th>
-          <%= group.name %>
-        </th>
+      <th><%= group.name %></th>
       <% end %>
-      </tr>
+    </tr>
+      <% @project.course.enrolled_students.each do |user| %>
       <tr>
-      <% @project.course.users do |user| %>
-        <td>
-          <%= user.name %>
-        </td>
+        <td><%= user.name %></td>
         <% @project.groups.each do |group| %>
-          <td>
-            Must figure out membership radio button
-          </td>
+        <td><%= "X" if group.has_user user %></td>
         <% end %>
-      <% end %>
       </tr>
-    </table>
+      <% end %>
+  <table>
   <% end %>
     
 
