--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -5,8 +5,8 @@
     <%= f.association :course %>
     <%= f.input :name %>
     <%= f.input :active %>
-    <%= f.input :start_date, as: :date, html5: true %>
-    <%= f.input :end_date, as: :date, html5: true %>
+    <%= f.input :start_date, as: :datetime %>
+    <%= f.input :end_date, as: :datetime %>
     <%= f.select :start_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
     <%= f.select :end_dow, Date::DAYNAMES.each_with_index.to_a, prompt: true  %>
     <%= f.association :factor_pack %>
