--- a/app/views/layouts/graphing.html.erb
+++ b/app/views/layouts/graphing.html.erb
@@ -3,26 +3,14 @@
 <head>
   <title>CoLab Reporting</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <script language="text/javascript">
-    $(document).bind("mobileinit", function(){
-      $.mobile.ajaxLinksEnabled = false;
-      $.mobile.ajaxFormsEnabled = false;
-      $.mobile.ajaxEnabled = false;
-    });
-  </script>
-  <%= javascript_include_tag 'graphing_manifest' %>
+  <%= javascript_include_tag "graphing_manifest" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <div data-role="page" data-theme="a">
-    <div data-role="header" data-position="fixed">
-      <% if !@current_user.nil? %>
-        <%= link_to "Home", root_path, :'data-icon' => "home", :"data-theme" => "d" %>
-      <% end %>
-      <h1>Self- and Peer-Assessment Reporting</h1>
+    <div data-role="header" data-position="fixed" style="overflow:hidden;" >
+      <h1>CoLab : Reporting</h1>
     </div>
 
     <div data-role="content">
@@ -35,52 +23,7 @@
 
 <%= yield %>
     </div>
-    <div data-role="footer" data-position="fixed">
-      <div class="ui-grid-a">
-        <div class="ui-block-a">
-          <div data-role="controlgroup" data-type="horizontal" data-mini="true">
-            <% if !@current_user.nil? %>
-              <%= link_to 'Profile', edit_user_registration_path(@current_user), :'data-icon' => "gear",
-                :'data-role' => "button", :"data-theme" => "d" %>
-            <% end %>
-            <% if !@current_user.nil? %>
-              <% if @current_user.is_instructor? %>
-                <div data-role="popup" id="instructor_menu">
-                  <ul data-role="listview" data-inset="true" data-theme="d" data-mini="true">
-                    <li data-role="divider" data-theme="a">Instructor Functions</li>
-                    <li><%= link_to "Control Panel", cpanel_root_path, 
-                      :"data-theme" => "d", :"data-mini" => true %></li>
-                    <li><%= link_to "Reports", graphing_path, 
-                      :"data-theme" => "d", :"data-mini" => true %></li>
-                  </ul>
-                </div>
-                <a href="#instructor_menu" data-rel="popup" data-role="button" data-theme="d">Instructor</a>
-                <% if @current_user.is_admin? %>
-                  <%= link_to "Admin", admin_root_path, :'data-role' => "button", :"data-theme" => "d" %>
-                <% end %>
-              <% end %>
-              <%= link_to 'Logout', destroy_user_session_path, :method => :delete, :'data-role' => "button",
-                :"data-theme" => "d" %>
-            <% end %>
-          </div>
-        </div>
-        <div class="ui-block-b">
-          <div data-role="controlgroup" data-type="horizontal" data-mini="true" align="right">
-            <a href="#popupTutorial" data-position-to="window" data-rel="popup" data-role="button" data-theme="d">Tutorial</a>
-            <div data-role="popup" id="popupTutorial" data-overlay-theme="a" data-theme="d"
-              data-tolerance="15,15" class="ui-content">
-              <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete"
-                data-iconpos="notext" class="ui-btn-right">Close</a>
-              <iframe src="https://www.PeerAssess.info/graphing_demo" width="655" height="495" seamless></iframe>
-              <p align="center">Tutorial: Viewing the reported data</p>
-            </div>
-            <%= mail_to "support@peerAssess.info", "Contact Support",
-              :subject => "SAPA Support Request", :'data-role' => "button", :"data-theme" => "d"%>
-            <%= link_to "About", "https://www.PeerAssess.info", :'data-role' => "button", :"data-theme" => "d" %>
-          </div>
-        </div>
-      </div>
-    </div>
+      <%= render "layouts/shared/footer", working: true %>
   </div>
 </body>
 </html>
